--- a/main_app/templates/owners/new.html
+++ b/main_app/templates/owners/new.html
@@ -12,7 +12,6 @@
             Please enter the name of your truck.
           </div>
     </div>
-    <br>
     <div class="form-group validate-me">
         <label>CURRENT LOCATION</label>
         <input id="autocomplete" type="text" name="location" class="form-control" required>
@@ -20,12 +19,10 @@
             Please enter your current location.
           </div>
     </div>
-    <br>
     <div class="form-group">
         <label>ADD PHOTO</label>
         <input type="file" name="photo-file" class="form-control">
     </div>
-    <br>
     <div class="form-group validate-me">
         <label>DESCRIPTION</label>
         <textarea class="form-control" name="description" rows="6" placeholder="Enter truck description" required></textarea>
@@ -33,7 +30,6 @@
             Please enter the description of your truck.
           </div>
     </div>
-    <br>
     <div class="form-group">
         <label>OPERATING HOURS</label>    
     <table class="table">
@@ -79,7 +75,6 @@
         </tr>
     </table>
     </div>
-    <br>
     <div class="form-row">
         <label>TAGS</label>
         <div class="form-group col-md-6">
@@ -104,7 +99,6 @@
             <input type="text" name="content" class="form-control" placeholder="Enter a tag">
         </div>
     </div>
-    <br>
     <div class="form-group validate-me">
         <label>MENU</label>
     <table class="table menu">
@@ -134,12 +128,10 @@
         </tr>
     </table>
     </div>
-    <button type="button" class="btn new-menu" style="width: 100%; background-color: #BCD5E3;">Add More Items</button>
-    <br> <br>
-    <button class="btn" style="width: 100%; background-color: #BCD5E3;">Create New Listing</button>
+    <button type="button" class="btn new-menu" style="width: 100%; margin-bottom: 20px; background-color: #BCD5E3;">Add More Items</button>
+    <button class="btn" style="width: 100%; margin-bottom: 20px; background-color: #BCD5E3;">Create New Listing</button>
 </form>
 </div>
-<br>
 
 <script>
     let menuTable = document.querySelector('.menu')
