--- a/main_app/templates/results/index.html
+++ b/main_app/templates/results/index.html
@@ -30,6 +30,7 @@
     </div>
     <div class="contentWrapper">
         <div class="content active" id="home">
+            {% if queryset %}
             {% for truck in queryset %}
             <a href="{% url 'results_show' truck.id %}">
                 <div class="truck-container">
@@ -77,6 +78,9 @@
                 </div>
             </a>
             {% endfor %}
+            {% else %}
+            <p class="no-results">There are no results...</p>
+            {% endif %}
         </div>
         <div class="content" id="about">
             <div id="map"></div>
