--- a/main_app/templates/show.html
+++ b/main_app/templates/show.html
@@ -28,6 +28,7 @@
     </div>
     <div class="contentWrapper">
         <div class="content active" id="home">
+            {% if trucks %}
             {% for truck in trucks %}
             <a href="{% url 'results_show' truck.id %}">
                 <div class="truck-container">
@@ -75,6 +76,9 @@
                 </div>
             </a>
             {% endfor %}
+            {% else %}
+            <p class="no-results">There are no results...</p>
+            {% endif %}
         </div>
         <div class="content" id="about">
             <div id="map"></div>
