--- a/main_app/templates/owners/new.html
+++ b/main_app/templates/owners/new.html
@@ -30,9 +30,9 @@
             Please enter the description of your truck.
           </div>
     </div>
-    <div class="form-group">
+    <div class="form-group table-responsive">
         <label>OPERATING HOURS</label>    
-    <table class="table">
+    <table class="table hours-table">
         <tr>
             <th>Day</th>
             <th>Open Hours</th>
@@ -46,7 +46,7 @@
         <tr>
             <td>Tuesday</td>
             <td><input type="time" class="open-hour" name="tuesday_open"></td>
-            <td><input type="time" class="close-hou validate-mer" name="tuesday_close"></td>
+            <td><input type="time" class="close-hour validate-me" name="tuesday_close"></td>
         </tr>
         <tr>
             <td>Wednesday</td>
@@ -75,32 +75,36 @@
         </tr>
     </table>
     </div>
-    <div class="form-row">
-        <label>TAGS</label>
-        <div class="form-group col-md-6">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+    <div class="container">
+        <div class="row">
+            <label>TAGS</label>
+            <div class="form-group col">
+                <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+            </div>
+            <div class="form-group col">
+                <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+            </div>
         </div>
-        <div class="form-group col-md-6">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+        <div class="row">
+            <div class="form-group col">
+                <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+            </div>
+            <div class="form-group col">
+                <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+            </div>
         </div>
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag">
-        </div>
-        <div class="form-group col-md-6">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag">
-        </div>
-    </div>
-    <div class="form-row">
-        <div class="form-group col-md-6">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag">
-        </div>
-        <div class="form-group col-md-6">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+        <div class="row">
+            <div class="form-group col">
+                <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+            </div>
+            <div class="form-group col">
+                <input type="text" name="content" class="form-control" placeholder="Enter a tag">
+            </div>
         </div>
     </div>
     <div class="form-group validate-me">
         <label>MENU</label>
+    <div class="table">
     <table class="table menu">
         <tr>
             <th>Menu Item</th>
@@ -127,6 +131,7 @@
             <td><input type="submit" class="btn delete"style="width: 100%; background-color: #BCD5E3;" value="-"></td>
         </tr>
     </table>
+    </div>
     </div>
     <button type="button" class="btn new-menu" style="width: 100%; margin-bottom: 20px; background-color: #BCD5E3;">Add More Items</button>
     <button class="btn" style="width: 100%; margin-bottom: 20px; background-color: #BCD5E3;">Create New Listing</button>
@@ -165,7 +170,7 @@
         for (i = 0; i < openHour.length; i++) {
             if (openHour[i].value != "" && closeHour[i].value == "") {
                 closeHour[i].required = true
-                alert('enter closing time')
+                closeHour[i].style.border = '1px solid red'
                 return false;
             }
         }
