--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="container mx-auto d-flex align-items-center justify-content-center">
+<div class="login-container container mx-auto d-flex align-items-center justify-content-center">
   <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
     <div class="form-group">
