--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-dark">
+    <nav class="navbar navbar-dark navbar-mobile">
         <button class="openbtn btn btn-outline-success">&#9776;</button>
         <a href="#" id="logo">strEAT Finder</a>
         <a class="searchbtn btn btn-outline-success" href="/"><svg xmlns="http://www.w3.org/2000/svg" width="16"
@@ -25,7 +25,7 @@
                     d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
             </svg></a>
     </nav>
-    <div id="mySidebar" class="sidebar">
+    <div id="mySidebar" class="sidebar navbar-mobile">
         <a href="javascript:void(0)" class="closebtn">&times;</a>
         <div class="link-container">
             {% if user.is_authenticated and user.type == 'Eater' %}
@@ -46,6 +46,30 @@
             {% endif %}
         </div>
     </div>
+    <nav class="navbar navbar-desktop">
+        <li><a href="#" class="logo-desktop" id="logo">strEAT Finder</a></li>
+        <ul>
+            {% if user.is_authenticated and user.type == 'Eater' %}
+            <li><a href="{% url 'home' %}">SEARCH</a></li>
+            <li><a href="{% url 'show_all' %}">SHOW ALL</a></li>
+            <li><a href="{% url 'favourites' user.id %}">MY FAVOURITES</a>
+            </li>
+            <li><a href="{% url 'logout' %}">LOGOUT</a></li>
+            {% elif user.is_authenticated and user.type == 'Owner' %}
+            <li><a href="{% url 'home' %}">SEARCH</a></li>
+            <li><a href="{% url 'show_all' %}">SHOW ALL</a></li>
+            <li><a href="{% url 'owners_home' user.id %}">OWNER'S PORTAL</a>
+            </li>
+            <li><a href="{% url 'logout' %}">LOGOUT</a></li>
+            {% else %}
+            <li><a href="{% url 'home' %}">SEARCH</a></li>
+            <li><a href="{% url 'show_all' %}">SHOW ALL</a></li>
+            <li><a href="{% url 'signup' %}">SIGN UP</a></li>
+            <li><a href="{% url 'login' %}">LOG IN</a></li>
+            {% endif %}
+        </ul>
+    </nav>
+
     <div class="main">
         {% block content %}
         {% endblock %}
