--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -36,54 +36,56 @@
     </div>
 </div>
 
-<div class="truck-gallery-container">
-    <div class="truck-gallery-title">
-        <p>Our Favourites</p>
-    </div>
-    <div class="truck-gallery-subcontainer">
-        {% for truck in trucks %}
-        <a href="{% url 'results_show' truck.id %}">
-            <div class="truck-single-container">
-                <img src="{{ truck.url }}">
-                <p class="gallery-truck-title">{{ truck.name }}</p>
-                <p>
-                    <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17"
-                            fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
-                            <path
-                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
-                        </svg>
-                    </span>
-                    <span class="text">
-                        <span class="rating">{{ truck.overall_rating|floatformat:1 }} / 5.0</span>
-                    </span>
-                </p>
-            </div>
-        </a>
-        {% endfor %}
-    </div>
-</div>
-
-<div class="random-reviews-container">
-    <div class="random-reviews-title">
-        <p>Discover New Trucks!</p>
-    </div>
-    <div class="random-trucks-container">
-        {% for truck in random_trucks %}
-        <div class="random-truck-container">
-            <div class="random-truck-image-container">
-                <img src="{{ truck.0.url }}">
-            </div>
-            <div class="random-truck-description-container">
-                <div class="random-truck-description">
-                    <p>{{ truck.0.description }}</p>
-                </div>
-                <div class="random-truck-random-review">
-                    <p>"{{ truck.1.content }}"</p>
-                </div>
-            </div>
+<div class="description-container-main">
+    <div class="truck-gallery-container">
+        <div class="truck-gallery-title">
+            <p>Our Favourites</p>
         </div>
-        {% endfor %}
+        <div class="truck-gallery-subcontainer">
+            {% for truck in trucks %}
+            <a href="{% url 'results_show' truck.id %}">
+                <div class="truck-single-container">
+                    <img src="{{ truck.url }}">
+                    <p class="gallery-truck-title">{{ truck.name }}</p>
+                    <p>
+                        <span class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="17" height="17"
+                                fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                <path
+                                    d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                            </svg>
+                        </span>
+                        <span class="text">
+                            <span class="rating">{{ truck.overall_rating|floatformat:1 }} / 5.0</span>
+                        </span>
+                    </p>
+                </div>
+            </a>
+            {% endfor %}
+        </div>
     </div>
-
+    <div class="random-reviews-container">
+        <div class="random-reviews-title">
+            <p>Discover New Trucks!</p>
+        </div>
+        <div class="random-trucks-container">
+            {% for truck in random_trucks %}
+            <a href="{% url 'results_show' truck.0.id %}">
+                <div class="random-truck-container">
+                    <div class="random-truck-image-container">
+                        <img src="{{ truck.0.url }}">
+                    </div>
+                    <div class="random-truck-description-container">
+                        <div class="random-truck-description">
+                            <p>{{ truck.0.description }}</p>
+                        </div>
+                        <div class="random-truck-random-review">
+                            <p>"{{ truck.1.content }}"</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+            {% endfor %}
+        </div>
+    </div>
 </div>
 {% endblock %}
