--- a/main_app/templates/results/show.html
+++ b/main_app/templates/results/show.html
@@ -25,16 +25,21 @@
         <p class="rating">No ratings yet...</p>
         {% endif %}
     </div>
-    <div class="show-truck-img-container">
-        <img class="show-image" src="{{truck.url}}">
+    <div class="img-description-container">
+        <div class="show-truck-img-container">
+            <img class="show-image" src="{{truck.url}}">
+        </div>
+        <div>
+            <p class="show-truck-description">{{ truck.description }}</p>
+            <div class="show-details-container">
+                <button class="btn btn-primary show-hours">SHOW HOURS</button>
+                <button class="btn btn-primary show-menu">SHOW MENU</button>
+            </div>
+        </div>
     </div>
-    <p class="show-truck-description">{{ truck.description }}</p>
 </div>
 
-<div class="show-details-container">
-    <button class="btn btn-primary show-hours">SHOW HOURS</button>
-    <button class="btn btn-primary show-menu">SHOW MENU</button>
-</div>
+
 
 <div class="show-favourites-container">
     {% if user.is_authenticated and favourite %}
@@ -228,66 +233,8 @@
 <script
     src="https://maps.googleapis.com/maps/api/js?libraries=places&libraries=&v=weekly&key=AIzaSyDtN4w76X1h9sk9jNP8SvP4jF4YIuLv2jA"></script>
 
-<script>
-
-    let hoursModal = document.getElementById('modal-hours');
-    let menuModal = document.getElementById('modal-menu')
-    let showHoursBtn = document.querySelector('.show-hours');
-    let showMenuBtn = document.querySelector('.show-menu');
-    let spanClose = document.querySelector('.close-hours');
-    let spanMenuClose = document.querySelector('.close-menu');
-
-    showMenuBtn.onclick = function () {
-        menuModal.style.display = 'block';
-    }
-
-    showHoursBtn.onclick = function () {
-        hoursModal.style.display = "block";
-    }
-
-    spanClose.onclick = function () {
-        hoursModal.style.display = "none";
-    }
-
-    spanMenuClose.onclick = function () {
-        menuModal.style.display = "none";
-    }
-
-    window.onclick = function (e) {
-        if (e.target == hoursModal) {
-            hoursModal.style.display = "none";
-        } else if (e.target == menuModal) {
-            menuModal.style.display = "none";
-        }
-    }
-
-    function initMap() {
-        const geocoder = new google.maps.Geocoder();
-        const toronto = { lat: 43.651070, lng: -79.347015 };
-        const map = new google.maps.Map(document.getElementById("show-map"), {
-            zoom: 11,
-            center: toronto,
-        })
-        let location = document.querySelector('.show-truck-location');
-        geocodeAddress(geocoder, map, location);
-    }
-
-    function geocodeAddress(geocoder, resultsMap, location) {
-        geocoder.geocode({ 'address': location.innerHTML }, function (results, status) {
-            if (status == 'OK') {
-                let marker = new google.maps.Marker({
-                    map: resultsMap,
-                    position: results[0].geometry.location,
-                });
-                resultsMap.panTo(results[0].geometry.location);
-            } else {
-                alert('Geocode was not successful for the following reason: ' + status);
-            }
-        });
-    }
-
-    initMap()
-</script>
+{% load static %}
+<script src="{% static 'javascript/results-show.js' %}"></script>
 
 
 {% endblock %}
