--- a/main_app/templates/owners/edit.html
+++ b/main_app/templates/owners/edit.html
@@ -4,198 +4,158 @@
 
 <div class="container">
     <h1>Edit {{ truck.name }}</h1>
-<form class="needs-validation" novalidate action="{% url 'owners_update' owner.id truck.id %}" onsubmit="return validateForm()" enctype="multipart/form-data" method="POST">
-    {% csrf_token %}
-    <div class="form-group validate-me">
-        <label>NAME</label>
-        <input type="text" name="name" class="form-control" placeholder="Enter truck name" value="{{ truck.name }}" required>
-    </div>
-    <div class="form-group validate-me">
-        <label>CURRENT LOCATION</label>
-        <input id="autocomplete" type="text" name="location" class="form-control"  value="{{ truck.location}}" required>
-    </div>
-    <img class="edit-img" src="{{truck.url}}">
-    <div class="form-group">
-        <label>ADD/EDIT PHOTO</label>
-        <input type="file" name="photo-file" class="form-control">
-    </div>
-    <div class="form-group validate-me">
-        <label>DESCRIPTION</label>
-        <textarea class="form-control" name="description" rows="6" placeholder="Enter truck description" required>{{ truck.description }}</textarea>
-    </div>
-    <div class="form-group table-responsive">
-        <label>OPERATING HOURS</label>    
-    <table class="table hours-table">
-        <tr>
-            <th>Day</th>
-            <th>Open Hours</th>
-            <th>Close Hours</th>
-        </tr>
-        <tr>
-            <td>Monday</td>
-            <td><input type="time" class="open-hour" name="monday_open" value="{{ hours.monday_open }}"></td>
-            <td><input type="time" class="close-hour" name="monday_close" value="{{ hours.monday_close }}"></td>
-        </tr>
-        <tr>
-            <td>Tuesday</td>
-            <td><input type="time" class="open-hour" name="tuesday_open" value="{{ hours.tuesday_open }}"></td>
-            <td><input type="time" class="close-hour" name="tuesday_close" value="{{ hours.tuesday_close }}"></td>
-        </tr>
-        <tr>
-            <td>Wednesday</td>
-            <td><input type="time" class="open-hour" name="wednesday_open" value="{{ hours.wednesday_open }}"></td>
-            <td><input type="time" class="close-hour" name="wednesday_close" value="{{ hours.wednesday_close }}"></td>
-        </tr>
-        <tr>
-            <td>Thursday</td>
-            <td><input type="time" class="open-hour" name="thursday_open" value="{{ hours.thursday_open }}"></td>
-            <td><input type="time" class="close-hour" name="thursday_close" value="{{ hours.thursday_close }}"></td>
-        </tr>
-        <tr>
-            <td>Friday</td>
-            <td><input type="time" class="open-hour" name="friday_open" value="{{ hours.friday_open }}"></td>
-            <td><input type="time" class="close-hour" name="friday_close" value="{{ hours.friday_close }}"></td>
-        </tr>
-        <tr>
-            <td>Saturday</td>
-            <td><input type="time" class="open-hour" name="saturday_open" value="{{ hours.saturday_open }}"></td>
-            <td><input type="time" class="close-hour" name="saturday_close" value="{{ hours.saturday_close }}"></td>
-        </tr>
-        <tr>
-            <td>Sunday</td>
-            <td><input type="time" class="open-hour" name="sunday_open" value="{{ hours.sunday_open }}"></td>
-            <td><input type="time" class="close-hour" name="sunday_close" value="{{ hours.sunday_close }}"></td>
-        </tr>
-    </table>
-    </div>
-    <div class="container">
-    <div class="row">
-        <label>TAGS</label>
-        <div class="form-group col">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag" value="{{ tags.0 }}">
+    <form class="needs-validation" novalidate action="{% url 'owners_update' owner.id truck.id %}"
+        onsubmit="return validateForm()" enctype="multipart/form-data" method="POST">
+        {% csrf_token %}
+        <div class="form-group validate-me">
+            <label>NAME</label>
+            <input type="text" name="name" class="form-control" placeholder="Enter truck name" value="{{ truck.name }}"
+                required>
         </div>
-        <div class="form-group col">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag" value="{{ tags.1 }}">
+        <div class="form-group validate-me">
+            <label>CURRENT LOCATION</label>
+            <input id="autocomplete" type="text" name="location" class="form-control" value="{{ truck.location}}"
+                required>
         </div>
-    </div>
-    <div class="row">
-        <div class="form-group col">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag" value="{{ tags.2 }}">
+        <div class="image-container-owner">
+            <img class="edit-img" src="{{truck.url}}">
         </div>
-        <div class="form-group col">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag" value="{{ tags.3 }}">
+        <div class="form-group">
+            <label>ADD/EDIT PHOTO</label>
+            <input type="file" name="photo-file" class="form-control">
         </div>
-    </div>
-    <div class="row">
-        <div class="form-group col">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag" value="{{ tags.4 }}">
+        <div class="form-group validate-me">
+            <label>DESCRIPTION</label>
+            <textarea class="form-control" name="description" rows="6" placeholder="Enter truck description"
+                required>{{ truck.description }}</textarea>
         </div>
-        <div class="form-group col">
-            <input type="text" name="content" class="form-control" placeholder="Enter a tag" value="{{ tags.5 }}">
+        <div class="form-group table-responsive">
+            <label>OPERATING HOURS</label>
+            <table class="table hours-table">
+                <tr>
+                    <th>Day</th>
+                    <th>Open Hours</th>
+                    <th>Close Hours</th>
+                </tr>
+                <tr>
+                    <td>Monday</td>
+                    <td><input type="time" class="open-hour" name="monday_open" value="{{ hours.monday_open }}"></td>
+                    <td><input type="time" class="close-hour" name="monday_close" value="{{ hours.monday_close }}"></td>
+                </tr>
+                <tr>
+                    <td>Tuesday</td>
+                    <td><input type="time" class="open-hour" name="tuesday_open" value="{{ hours.tuesday_open }}"></td>
+                    <td><input type="time" class="close-hour" name="tuesday_close" value="{{ hours.tuesday_close }}">
+                    </td>
+                </tr>
+                <tr>
+                    <td>Wednesday</td>
+                    <td><input type="time" class="open-hour" name="wednesday_open" value="{{ hours.wednesday_open }}">
+                    </td>
+                    <td><input type="time" class="close-hour" name="wednesday_close"
+                            value="{{ hours.wednesday_close }}"></td>
+                </tr>
+                <tr>
+                    <td>Thursday</td>
+                    <td><input type="time" class="open-hour" name="thursday_open" value="{{ hours.thursday_open }}">
+                    </td>
+                    <td><input type="time" class="close-hour" name="thursday_close" value="{{ hours.thursday_close }}">
+                    </td>
+                </tr>
+                <tr>
+                    <td>Friday</td>
+                    <td><input type="time" class="open-hour" name="friday_open" value="{{ hours.friday_open }}"></td>
+                    <td><input type="time" class="close-hour" name="friday_close" value="{{ hours.friday_close }}"></td>
+                </tr>
+                <tr>
+                    <td>Saturday</td>
+                    <td><input type="time" class="open-hour" name="saturday_open" value="{{ hours.saturday_open }}">
+                    </td>
+                    <td><input type="time" class="close-hour" name="saturday_close" value="{{ hours.saturday_close }}">
+                    </td>
+                </tr>
+                <tr>
+                    <td>Sunday</td>
+                    <td><input type="time" class="open-hour" name="sunday_open" value="{{ hours.sunday_open }}"></td>
+                    <td><input type="time" class="close-hour" name="sunday_close" value="{{ hours.sunday_close }}"></td>
+                </tr>
+            </table>
         </div>
-    </div></div>
-    <div class="form-group  validate-me">
-        <label>MENU</label>
-    <table class="table menu">
-        <tr>
-            <th>Menu Item</th>
-            <th>Description</th>
-            <th>Price</th>
-            <th></th>
-        </tr>
-        {% if menu %}
-        {% for menu_item in menu %}
-        <tr>
-            <td><input type="text" class="form-control food-name" name="food_name" value="{{ menu_item.food_name}}"></td>
-            <td><input type="text" class="form-control food-description" name="food_description" value="{{ menu_item.food_description }}"></td>
-            <td><input type="number" class="form-control food-price" min="0.00" max="10000.00" step="0.01" name="food_price" value="{{ menu_item.food_price}}"></td>
-            <td><input type="submit" class="btn delete"style="width: 100%; background-color: #BCD5E3;" value="-"></td>
-        </tr>
-        {% endfor %}
-        {% else %}
-        <tr>
-            <td><input type="text" class="form-control food-name" name="food_name"></td>
-            <td><input type="text" class="form-control food-description" name="food_description"></td>
-            <td><input type="number" class="form-control food-price" min="0.00" max="10000.00" step="0.01" name="food_price" placeholder="0.00"></td>
-            <td><input type="submit" class="btn delete"style="width: 100%; background-color: #BCD5E3;" value="-"></td>
-        </tr>
-        {% endif %}
-    </table>
-    </div>
-    <button type="button" class="btn new-menu" style="width: 100%; margin-bottom: 20px; background-color: #BCD5E3;">Add More Items</button>
-    <button class="btn" style="width: 100%; margin-bottom: 20px; background-color: #BCD5E3;">Update Listing</button>
-</form>
+        <div class="container">
+            <div class="row">
+                <label>TAGS</label>
+                <div class="form-group col">
+                    <input type="text" name="content" class="form-control" placeholder="Enter a tag"
+                        value="{{ tags.0 }}">
+                </div>
+                <div class="form-group col">
+                    <input type="text" name="content" class="form-control" placeholder="Enter a tag"
+                        value="{{ tags.1 }}">
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col">
+                    <input type="text" name="content" class="form-control" placeholder="Enter a tag"
+                        value="{{ tags.2 }}">
+                </div>
+                <div class="form-group col">
+                    <input type="text" name="content" class="form-control" placeholder="Enter a tag"
+                        value="{{ tags.3 }}">
+                </div>
+            </div>
+            <div class="row">
+                <div class="form-group col">
+                    <input type="text" name="content" class="form-control" placeholder="Enter a tag"
+                        value="{{ tags.4 }}">
+                </div>
+                <div class="form-group col">
+                    <input type="text" name="content" class="form-control" placeholder="Enter a tag"
+                        value="{{ tags.5 }}">
+                </div>
+            </div>
+        </div>
+        <div class="form-group  validate-me">
+            <label>MENU</label>
+            <table class="table menu">
+                <tr>
+                    <th>Menu Item</th>
+                    <th>Description</th>
+                    <th>Price</th>
+                    <th></th>
+                </tr>
+                {% if menu %}
+                {% for menu_item in menu %}
+                <tr>
+                    <td><input type="text" class="form-control food-name" name="food_name"
+                            value="{{ menu_item.food_name}}"></td>
+                    <td><input type="text" class="form-control food-description" name="food_description"
+                            value="{{ menu_item.food_description }}"></td>
+                    <td><input type="number" class="form-control food-price" min="0.00" max="10000.00" step="0.01"
+                            name="food_price" value="{{ menu_item.food_price}}"></td>
+                    <td><input type="submit" class="btn delete" style="width: 100%; background-color: #BCD5E3;"
+                            value="-"></td>
+                </tr>
+                {% endfor %}
+                {% else %}
+                <tr>
+                    <td><input type="text" class="form-control food-name" name="food_name"></td>
+                    <td><input type="text" class="form-control food-description" name="food_description"></td>
+                    <td><input type="number" class="form-control food-price" min="0.00" max="10000.00" step="0.01"
+                            name="food_price" placeholder="0.00"></td>
+                    <td><input type="submit" class="btn delete" style="width: 100%; background-color: #BCD5E3;"
+                            value="-"></td>
+                </tr>
+                {% endif %}
+            </table>
+        </div>
+        <button type="button" class="btn new-menu"
+            style="width: 100%; margin-bottom: 20px; background-color: #BCD5E3;">Add More Items</button>
+        <button class="btn" style="width: 100%; margin-bottom: 20px; background-color: #BCD5E3;">Update Listing</button>
+    </form>
 </div>
-<script>
-    let menuTable = document.querySelector('.menu')
-    let newMenuBtn = document.querySelector('.new-menu')
-    newMenuBtn.addEventListener('click', () => {
-        let newRow = menuTable.insertRow(-1);
-        let cell1 = newRow.insertCell(0);
-        let cell2 = newRow.insertCell(1);
-        let cell3 = newRow.insertCell(2);
-        let cell4 = newRow.insertCell(3);
-        cell1.innerHTML = `<input type="text" class="form-control food-name" name="food_name">`
-        cell2.innerHTML = `<input type="text" class="form-control food-description" name="food_description">`
-        cell3.innerHTML = `<input type="number" class="form-control food-price" min="0.00" max="10000.00" step="0.01" name="food_price" placeholder="0.00">`
-        cell4.innerHTML = `<input type="submit" class="btn delete"style="width: 100%; background-color: #BCD5E3;" value="-">`
-        cell4.children[0].addEventListener('click', () => {
-            menuTable.deleteRow(cell4.children[0].parentElement.parentElement.rowIndex)
-        })
-    })
-    let deleteBtns = document.querySelectorAll('.delete')
-    deleteBtns.forEach((btn) => {
-        btn.addEventListener('click', () => {
-            menuTable.deleteRow(btn.parentElement.parentElement.rowIndex)
-        })
-    })
-    let openHour = document.querySelectorAll('.open-hour')
-    let closeHour = document.querySelectorAll('.close-hour')
-    let foodName = document.querySelectorAll('.food-name')
-    let foodDescription = document.querySelectorAll('.food-description')
-    let foodPrice = document.querySelectorAll('.food-price')
-    validateForm = () => {
-        for (i = 0; i < openHour.length; i++) {
-            if (openHour[i].value != "" && closeHour[i].value == "") {
-                    closeHour[i].required = true
-                    closeHour[i].style.border = '1px solid red'
-                    return false;
-            }
-        }
-        for (i = 0; i < foodName.length; i++) {
-            if (foodName[i].value != "" && foodDescription[i].value == "" || foodName[i].value != "" && foodPrice[i].value == "") {
-                    foodDescription[i].required = true
-                    foodPrice[i].required = true
-                    return false;
-            }
-        }
-    }
-</script>
+
 <script
     src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDtN4w76X1h9sk9jNP8SvP4jF4YIuLv2jA"></script>
-<script>
-    new google.maps.places.Autocomplete(
-        document.getElementById("autocomplete")
-    );
-</script>
-<script>
-    (function() {
-      'use strict';
-      window.addEventListener('load', function() {
-        var forms = document.getElementsByClassName('needs-validation');
-        var validateGroup = document.getElementsByClassName('validate-me');
-        var validation = Array.prototype.filter.call(forms, function (form) {
-                    form.addEventListener('submit', function (event) {
-                        if (form.checkValidity() === false) {
-                            event.preventDefault();
-                            event.stopPropagation();
-                        }
-                        for (var i = 0; i < validateGroup.length; i++) {
-                            validateGroup[i].classList.add('was-validated');
-                        }
-                    }, false);
-                });
-            }, false);
-    })();
-    </script>
+{% load static %}
+<script src="{% static 'javascript/owners-edit.js' %}"></script>
 {% endblock %}
