--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -1,25 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="login-container container mx-auto d-flex align-items-center justify-content-center">
-  <form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    <div class="form-group">
-      <label>Username</label>
-      <input type="text" class="form-control" name="username">
-    </div>
-    <div class="form-group">
-      <label>Password</label>
-      <input type="password" class="form-control bg-white" name="password">
-    </div>
-    <div class="row">
-      <div class="col text-center">
+<div class="main-login-container">
+  <div class="login-form-container">
+    <form method="post" action="{% url 'login' %}">
+      {% csrf_token %}
+      <div class="form-group">
+        <label>Username</label>
+        <input type="text" class="form-control" name="username">
+      </div>
+      <div class="form-group">
+        <label>Password</label>
+        <input type="password" class="form-control bg-white" name="password">
+      </div>
+      <div>
         <input class="btn" style="width: 100%; background-color: #BCD5E3;" type="submit" value="Login"><br>
         <a href="{% url 'signup' %}" class="btn" style="width: 100%;">Register</a>
         <input type="hidden" name="next" value="{{ next }}">
       </div>
-    </div>
-  </form>
+    </form>
+  </div>
 </div>
 
 {% endblock %}
