--- a/main_app/templates/results/index.html
+++ b/main_app/templates/results/index.html
@@ -91,62 +91,7 @@
 <script
     src="https://maps.googleapis.com/maps/api/js?libraries=places&libraries=&v=weekly&key=AIzaSyDtN4w76X1h9sk9jNP8SvP4jF4YIuLv2jA"></script>
 
-<script>
-    let count = 0;
-    let savedVals = [];
-    let ratings = [];
-    document.querySelectorAll('.rating').forEach((rating) => {
-        ratings.push(rating.innerHTML);
-    })
-    let trucks = document.querySelectorAll('.truck-container');
-    trucks.forEach((truck) => {
-        let name = truck.children[1].children[0].children[0].innerHTML;
-        let rating = ratings[count++];
-        let location = truck.children[1].children[3].children[0].innerHTML;
-        let truckId = truck.children[1].children[4].innerHTML;
-        savedVals.push([name, rating, location, truckId]);
-    })
-
-    function initMap() {
-        const geocoder = new google.maps.Geocoder();
-        const toronto = { lat: 43.651070, lng: -79.347015 };
-        const map = new google.maps.Map(document.getElementById("map"), {
-            zoom: 11,
-            center: toronto,
-        })
-        savedVals.forEach((truck) => {
-            geocodeAddress(geocoder, map, truck);
-        })
-    }
-
-    function geocodeAddress(geocoder, resultsMap, truck) {
-        geocoder.geocode({ 'address': truck[2] }, function (results, status) {
-            if (status == 'OK') {
-                const contentString =
-                    `<div class="pin">` +
-                    `<div id="title">${truck[0]}</div>` +
-                    `<div>Rating: ${truck[1]}</div>` +
-                    `<div>${truck[2]}</div>` +
-                    `<div><a id="details" href=${truck[3]}>Show Details</a></div>` +
-                    `</div>`
-                const infowindow = new google.maps.InfoWindow({
-                    content: contentString,
-                });
-                let marker = new google.maps.Marker({
-                    map: resultsMap,
-                    position: results[0].geometry.location,
-                    title: truck[0],
-                });
-                marker.addListener('click', () => {
-                    infowindow.open(map, marker);
-                })
-            } else {
-                alert('Geocode was not successful for the following reason: ' + status);
-            }
-        });
-    }
-
-    initMap()
-</script>
+{% load static %}
+<script src="{% static 'javascript/results-index.js' %}"></script>
 
 {% endblock %}
